Fix the wrapping of the nav-items on all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,10 @@ header {
 }
 
 /* -------Navbar */
+div.navbar-brand {
+    position: absolute;
+}
+
 header a {
     font-family: var(--exo-font);
     font-size: 1em;
@@ -60,7 +64,6 @@ header .nav-item:last-child a:hover {
 
 img.img-size {
     width: 50%;
-    padding-left: 3em;
 }
 /* -------End Navbar */
 /* -------Join us Modal */
